--- a/weather-mcp/pyproject.toml
+++ b/weather-mcp/pyproject.toml
@@ -1,11 +1,13 @@
 [project]
-name = "mcp-streamable-http-server"
+name = "mcp-weather-server-with-auth"
 version = "0.1.0"
-description = "HTTP Streamable based example MCP Server"
+description = "Weather MCP Server with Google OAuth Authentication"
 requires-python = ">=3.12"
 dependencies = [
     "httpx~=0.28.0",
-    "mcp~=1.9.0",
+    "fastmcp~=2.10.6",
+    "PyJWT~=2.8.0",
+    "cryptography~=42.0.0",
 ]
 
 [build-system]
